...
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="0dp"
                android:hint="@string/input_hint_phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="phone"
                    android:inputType="phone"
                    android:minLines="3" />
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/paste_from_clipboard_button"
                android:layout_marginBottom="@dimen/open_button_layout_vertical_padding">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/chat_app_button_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/open_button_layout_vertical_padding"
                    android:clipToPadding="false" />
            </com.google.android.material.card.MaterialCardView>

...
